<resources>
    <string name="google_maps_key">AIzaSyDIL4Hzibi1iAtBmbh6TNwXYifbB0Pbikk</string>
    <string name="chip_ellipsis">&#8230;</string>
    <string name="app_name">Belco Wallet</string>
    <string name="confirm">CONFIRM</string>
    <string name="bottom_menu_locations">Locations</string>
    <string name="bottom_menu_buy_sell">Buy/Sell</string>
    <string name="bottom_menu_settings">Settings</string>
    <string name="bottom_menu_wallet">Wallet</string>
    <string name="bottom_menu_deals">Services</string>
    <string name="base_screen_no_internet_title">No internet connection</string>
    <string name="base_screen_no_internet_description">Connect to WiFi or turn on mobile data.</string>
    <string name="base_screen_server_error_title">Server error</string>
    <string name="base_screen_server_error_description">Our server goes down. Please, try again later.</string>
    <string name="base_screen_something_wrong_title">Something wrong</string>
    <string name="base_screen_something_wrong_description">Our app runs into an issue. Please, try again later.</string>
    <string name="logo_text">Stay Ahead of the Crypto Future</string>
    <string name="pin_code_screen_enter_pin">Enter PIN</string>
    <string name="pin_code_screen_old_pin">Enter old PIN</string>
    <string name="pin_code_screen_new_pin">Enter new PIN</string>
    <string name="pin_code_screen_new_pin_confirm">Confirm new PIN</string>
    <string name="pin_code_screen_bio_title">Scan to access</string>
    <string name="pin_code_screen_bio_cancel">Enter PIN</string>
    <string name="code_created">Code created successfully</string>
    <string name="code_changed">Code changed successfully</string>
    <string name="pin_code_do_not_match">PINS don\'t match. Please try again</string>
    <string name="setup_pin_code">Setup new PIN</string>
    <string name="sms_code_screen_title">Verify Phone</string>
    <string name="sms_code_hint">Verification Code</string>
    <string name="sms_code_screen_description">Enter the SMS code to continue</string>
    <string name="sms_code_screen_did_not_get_the_code">Didn\'t get the code? </string>
    <string name="sms_code_screen_resend_code">Resend code</string>
    <string name="sms_code_screen_invalid_code">Wrong code</string>
    <string name="sms_code_screen_resend">New code was sent</string>
    <string name="welcome_screen_please_accept_tnc">Please, accept our Terms &amp; Conditions</string>
    <string name="welcome_screen_create_new_wallet">CREATE NEW WALLET</string>
    <string name="welcome_screen_recover_old_wallet">RECOVER OLD WALLET</string>
    <string name="welcome_screen_accept_terms_and_conditions">Accept Terms &amp; Conditions</string>
    <string name="welcome_screen_terms_and_conditions">Terms &amp; Conditions</string>
    <string name="welcome_screen_privacy_title">Private &amp; Secure</string>
    <string name="welcome_screen_privacy_description">Private keys are stored only on your device</string>
    <string name="welcome_screen_transfer_title">Transfer</string>
    <string name="welcome_screen_transfer_description">Send crypto to phone number</string>
    <string name="welcome_screen_swap_title">Swap</string>
    <string name="welcome_screen_swap_description">Instantly exchange one crypto with another one</string>
    <string name="welcome_screen_p2p_title">P2P Trade</string>
    <string name="welcome_screen_p2p_description">Trade crypto with people near you.\nCash supported!</string>
    <string name="welcome_screen_bank_title">Bank Accounts</string>
    <string name="welcome_screen_bank_description">Buy/Sell USDC from your bank account</string>
    <string name="welcome_screen_nft_title">NFT</string>
    <string name="welcome_screen_nft_description">Coming soon!</string>
    <string name="balance_screen_empty_balance">$…</string>
    <string name="balance_screen_manage_wallets">Manage wallets</string>
    <string name="recover_wallet_screen_title">Recover Old Wallet</string>
    <string name="recover_wallet_phone">Phone</string>
    <string name="recover_wallet_password">Password</string>
    <string name="recover_wallet_incorrect_login">Phone doesn\'t exist</string>
    <string name="recover_wallet_incorrect_password">Incorrect password</string>
    <string name="recover_wallet_incorrect_email">Incorrect email</string>
    <string name="recover_wallet_password_min_max_length">Password must be between 6 and 20 characters</string>
    <string name="recover_wallet_error_all_fields_required">All fields are required</string>
    <string name="verify_sms_code">Enter SMS code</string>
    <string name="phone_number">201-555-0123</string>
    <string name="create_wallet_screen_title">Create New Wallet</string>
    <string name="create_wallet_screen_phone">Phone</string>
    <string name="create_wallet_email">Email</string>
    <string name="create_wallet_screen_password">Password</string>
    <string name="create_wallet_screen_confirm_password">Confirm Password</string>
    <string name="create_wallet_error_all_fields_required">All fields are required</string>
    <string name="create_wallet_error_confirm_pass">Passwords do not match</string>
    <string name="create_wallet_error_email">Incorrect email</string>
    <string name="error_short_pin">PIN should contain 6 digits</string>
    <string name="error_confirm_pin">PIN do not match</string>
    <string name="create_wallet_error_short_pass">Password length should be from 6 to 15</string>
    <string name="error_sms_code_4_digits">Code should have 4 digits</string>
    <string name="create_wallet_error_invalid_phone_number">Invalid phone number</string>
    <string name="sms_code">SMS code</string>
    <string name="create_wallet_error_phone_registered">Phone is already registered</string>
    <string name="seed_phrase">Seed Phrase</string>
    <string name="seed_clipboard">Seed phrase copied to clipboard</string>
    <string name="seed_phrase_screen_copy">Copy</string>
    <string name="seed_phrase_screen_done">Done</string>
    <string name="seed_pharse_paste_error_message">Seed phrase should contain 12 words separated by space. Please rechecked seed phrase and paste it again</string>
    <string name="show_seed_screen_title">Seed Phrase</string>
    <string name="show_seed_screen_description">This is your wallet seed phrase. Keep it\nin a secure place and don’t share it with\nanyone. In case you lose the seed\nphrase you will not be able to recover\nyour wallet!</string>
    <string name="recover_seed_screen_title">Seed Phrase</string>
    <string name="recover_seed_screen_description">Enter your 12-word seed phrase here\nto restore your wallet.</string>
    <string name="recover_seed_screen_error_length">Seed phrase must be 12 words</string>
    <string name="recover_seed_screen_incorrect_phrase">Seed phrase you entered is invalid. Please try again</string>
    <string name="create_seed_screen_title">Seed Phrase</string>
    <string name="create_seed_screen_description">Generate a new seed phrase or paste your own. In case you lose the seed phrase you will not be able to recover your wallet!</string>
    <string name="create_seed_screen_seed_phrase_copied">Seed phrase copied</string>
    <string name="balance_screen_title_screen">Total</string>
    <string name="atm">ATM</string>
    <string name="settings">Settings</string>
    <string name="wallet">Wallet</string>
    <string name="verification_dialog_text">Please verify yourself to get full access\nto our services</string>
    <string name="verification_dialog_title">Buy/Sell USDC</string>
    <string name="verification_dialog_button_text">VERIFY</string>
    <string name="bank_accounts_screen_title">Bank Accounts</string>
    <string name="bank_accounts_create_screen_title">Create Bank Account</string>
    <string name="bank_accounts_screen_no_accounts_added">You haven\'t added any bank accounts yet</string>
    <string name="bank_accounts_screen_create_button">CREATE BANK ACCOUNT</string>
    <string name="bank_accounts_screen_link_button">LINK BANK ACCOUNT</string>
    <string name="bank_accounts_screen_bottom_disclaimer">Only US</string>
    <string name="bank_account_select_type_screen_us_type">U.S.</string>
    <string name="bank_account_select_type_screen_non_us_iban_type">Non-U.S. IBAN Supported</string>
    <string name="bank_account_select_type_screen_non_us_non_iban_type">Non-U.S. non-IBAN</string>
    <string name="bank_account_billing_details_category">Billing Details</string>
    <string name="bank_account_bank_address_category">Bank Address</string>
    <string name="bank_account_field_iban_hint_text">IBAN</string>
    <string name="bank_account_field_iban_helper_text">e.g. UA4359239187756638898244</string>
    <string name="bank_account_field_iban_error_text">IBAN is required</string>
    <string name="bank_account_field_account_no_hint_text">Account No</string>
    <string name="bank_account_field_account_no_helper_text">e.g. 12340010</string>
    <string name="bank_account_field_account_no_helper_text_non_iban">e.g. 1001001234</string>
    <string name="bank_account_field_account_no_error_text">Account No is required</string>
    <string name="bank_account_field_routing_no_hint_text">Routing No</string>
    <string name="bank_account_field_routing_no_helper_text">e.g. 121000248</string>
    <string name="bank_account_field_routing_no_error_text">Routing No is required</string>
    <string name="bank_account_field_routing_no_hint_text_non_iban">Routing No (SWIFT/BIC)</string>
    <string name="bank_account_field_routing_no_helper_text_non_iban">e.g. WESTGBAV</string>
    <string name="bank_account_field_routing_no_error_text_non_iban">Routing No (SWIFT/BIC) is required</string>
    <string name="bank_account_field_name_hint_text">Name</string>
    <string name="bank_account_field_name_helper_text">e.g. Satoshi Nakamoto</string>
    <string name="bank_account_field_country_hint_text">Country</string>
    <string name="bank_account_field_province_hint_text">Province</string>
    <string name="bank_account_field_city_hint_text">City</string>
    <string name="bank_account_field_address_hint_text">Address</string>
    <string name="bank_account_field_zip_code_hint_text">ZIP Code</string>
    <string name="bank_account_field_bank_name_hint_text">Bank Name</string>
    <string name="bank_account_field_bank_country_hint_text">Country</string>
    <string name="bank_account_field_bank_city_hint_text">City</string>
    <string name="bank_create_usdc_terms_text">By click \"Submit\" you agree to the</string>
    <string name="bank_ach_main_text">I (we), %1$s authorize Belco Wallet LLC(COMPANY) to electronically debit my (our) Depository account for a one-time electronic funds transfer (EFT) payment for the amount and on the date identified. I (we) also authorize COMPANY to debit or credit my (our) account to correct any errors or process any refunds, if necessary.</string>
    <string name="bank_ach_usdc_terms_text">By clicking \"Confirm\" I consent to sign this authorization\nelectronically and I agree with ACH authorization rules and\n</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="security_label">Security</string>
    <string name="wallets_label">Wallets</string>
    <string name="verification_label">Verification</string>
    <string name="notifications_label">Notifications</string>
    <string name="about_label">About</string>
    <string name="support_label">Support</string>
    <string name="update_phone_label">Update Phone</string>
    <string name="update_phone_hint">New Phone Number</string>
    <string name="update_pass_label">Update Password</string>
    <string name="update_pin_label">Update PIN</string>
    <string name="bio_auth_label">Use Bio Auth</string>
    <string name="seed_phrase_label">Seed Phrase</string>
    <string name="unlink_wallet_label">Unlink</string>
    <string name="phone_number_country_code">+1</string>
</resources>