<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.belcobtm.presentation.core.views.SettingsItemView
        android:id="@+id/update_phone_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:src="@drawable/ic_add_call"
        app:text="@string/update_phone_label"
        tools:value="+380 50 8881 8815" />

    <com.belcobtm.presentation.core.views.SettingsItemView
        android:id="@+id/update_pass_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:src="@drawable/ic_lock"
        app:text="@string/update_pass_label" />

    <com.belcobtm.presentation.core.views.SettingsItemView
        android:id="@+id/update_pin_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:src="@drawable/ic_security_pin"
        app:text="@string/update_pin_label" />

    <com.belcobtm.presentation.core.views.SettingsItemView
        android:id="@+id/switch_bio_auth_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:src="@drawable/ic_lock_id"
        app:text="@string/bio_auth_label"
        app:withSwitch="true"
        tools:visibility="visible" />

    <com.belcobtm.presentation.core.views.SettingsItemView
        android:id="@+id/seed_phrase_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:src="@drawable/ic_seed"
        app:text="@string/seed_phrase_label" />

    <com.belcobtm.presentation.core.views.SettingsItemView
        android:id="@+id/unlink_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:src="@drawable/ic_unlink"
        app:text="@string/unlink_wallet_label" />

</androidx.appcompat.widget.LinearLayoutCompat>