<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.belcobtm.presentation.core.views.SettingsItemView
        android:id="@+id/wallets_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:src="@drawable/ic_wallet"
        app:text="@string/wallets_label" />

    <com.belcobtm.presentation.core.views.SettingsItemView
        android:id="@+id/security_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:src="@drawable/ic_security"
        app:text="@string/security_label" />

    <com.belcobtm.presentation.core.views.SettingsItemView
        android:id="@+id/kyc_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:src="@drawable/ic_kyc"
        app:text="@string/verification_label" />

    <com.belcobtm.presentation.core.views.SettingsItemView
        android:id="@+id/notificationsItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:src="@drawable/ic_notifications"
        app:text="@string/notifications_label" />

    <com.belcobtm.presentation.core.views.SettingsItemView
        android:id="@+id/support_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:src="@drawable/ic_support"
        app:text="@string/support_label"
        app:valueColor="@color/red" />

    <!--   TODO:: rework or fix Referral feature   -->
<!--    <com.belcobtm.presentation.core.views.SettingsItemView-->
<!--        android:id="@+id/referrals_items"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:src="@drawable/ic_referrals"-->
<!--        app:text="@string/referrals_label" />-->

    <com.belcobtm.presentation.core.views.SettingsItemView
        android:id="@+id/about_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:src="@drawable/ic_info"
        app:text="@string/about_label" />

</androidx.appcompat.widget.LinearLayoutCompat>