<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/bank_account_fields_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/account_number_view"
                style="@style/BankAccountScreen.EditTextContainer">

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/BankAccountScreen.EditText"
                    android:hint="@string/bank_account_field_account_no_hint_text"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/routing_number_view"
                style="@style/BankAccountScreen.EditTextContainer">

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/BankAccountScreen.EditText"
                    android:hint="@string/bank_account_field_routing_no_hint_text"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/iban_view"
                style="@style/BankAccountScreen.EditTextContainer">

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/BankAccountScreen.EditText"
                    android:hint="@string/bank_account_field_iban_hint_text"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:id="@+id/billing_details_category"
                style="@style/BankAccountScreen.CategoryContainer"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/bank_account_billing_details_category"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/thick_divider_size"
                    android:background="@color/thin_divider" />

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_view"
                style="@style/BankAccountScreen.EditTextContainer">

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/BankAccountScreen.EditText"
                    android:hint="@string/bank_account_field_name_hint_text"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/country_view"
                style="@style/BankAccountScreen.EditTextContainer">

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/BankAccountScreen.EditText"
                    android:hint="@string/bank_account_field_country_hint_text"
                    android:inputType="textPostalAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/province_view"
                style="@style/BankAccountScreen.EditTextContainer">

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/BankAccountScreen.EditText"
                    android:hint="@string/bank_account_field_province_hint_text"
                    android:inputType="textPostalAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/city_view"
                style="@style/BankAccountScreen.EditTextContainer">

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/BankAccountScreen.EditText"
                    android:hint="@string/bank_account_field_city_hint_text"
                    android:inputType="textPostalAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_view"
                style="@style/BankAccountScreen.EditTextContainer">

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/BankAccountScreen.EditText"
                    android:hint="@string/bank_account_field_address_hint_text"
                    android:inputType="textPostalAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/zip_code_view"
                style="@style/BankAccountScreen.EditTextContainer">

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/BankAccountScreen.EditText"
                    android:hint="@string/bank_account_field_zip_code_hint_text"
                    android:inputType="number"
                    android:maxLength="5" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/bank_address_category"
                style="@style/BankAccountScreen.CategoryContainer"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bank_address_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/bank_account_bank_address_category"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/thick_divider_size"
                    android:background="@color/thin_divider" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bank_name_view"
                style="@style/BankAccountScreen.EditTextContainer">

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/BankAccountScreen.EditText"
                    android:hint="@string/bank_account_field_bank_name_hint_text"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bank_country_view"
                style="@style/BankAccountScreen.EditTextContainer">

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/BankAccountScreen.EditText"
                    android:hint="@string/bank_account_field_bank_country_hint_text"
                    android:inputType="textPostalAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bank_city_view"
                style="@style/BankAccountScreen.EditTextContainer">

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/BankAccountScreen.EditText"
                    android:hint="@string/bank_account_field_bank_city_hint_text"
                    android:inputType="textPostalAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/termsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="32dp"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                tools:text="@string/bank_create_usdc_terms_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_button"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/submit"
                android:textColor="#ffffff"
                android:visibility="visible" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>