<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp">

    <TextView
        android:id="@+id/mainTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/darkGray"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/bank_ach_main_text" />

    <TextView
        android:id="@+id/termsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textColor="@color/darkGray"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/confirmButton"
        tools:text="@string/bank_ach_usdc_terms_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmButton"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textColor="#ffffff"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>